# SimpleOS-rs

./: .gitignore  Cargo.toml  Makefile  README.md  debug-kernel.cmd  kernel-x86_64.json
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: allocator.rs  elf.rs  io.rs  main.rs  paging.rs  platform.rs
builder/: Cargo.toml
builder/src/: main.rs
common-structures/: Cargo.toml  kernel_header.rs
common-structures/src/: config.rs  kernel_header.rs  lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: main.rs  mutex.rs  terminal.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  mod.rs  platform.rs  virt_manager.rs
kernel/src/arch/x86_64/interrupt/: isrs.rs  mod.rs
kernel/src/interrupt/: mod.rs  set_isrs.rs  x86_64.rs
kernel/src/memory/: mod.rs  phys_manager.rs  virt_manager.rs
